=========================================================================
CHANGE LOG
=========================================================================

	
2207-19-07  Warren L. DeLano <warren@delsci.com>

	Changes up to 1.00b19

	* minor changes to better comply with GNU Build System: CHANGES is
	now ChangeLog, also added NEWS, COPYING, AUTHORS.

	* added autoconf-based build (for in-place install only) -- just
	Linux for starters missing macros for Mac OS X / X11 / Fink.
	
	* renamed all Makefile to Makefile.delsci in order to make room
	for an autoconf-based build

	* fixed bug with scenes in interpolated views
    
	* pymol now draws h_bonds from proton to acceptor if proton
	present and provided that h_bond_from_proton setting is true

	* ray_scatter setting (gives a nice increase in image realism)

	* ray_trace_trans_cutoff, ray_trace_persist_cutoff settings

	* improved transparency model with ray_transparency_oblique

	* alignment objects now created by alignment menus

	* support for scenes in interpolated views (wow that is cool).

	* new movie_fps setting subordiantes movie_delay

	* support for session file compression
        (default off for backwards compatibility)

Changes up to 1.00b16-18

	* fixed shadow transparency for per-atom triangle transparency

	* partial session saves & restores (objects only)

	* group members starting with internal ._ are now hidden too

	* group_arrow_prefix setting

	* new 'extract object' item in selection menus

	* fixed scroll bar bug with groups
    
	* fixed ray_trace_mode bug (bp099)

	* object:group now returned

	* ray_trace_color setting

	* switched from Vera to DejaVu fonts in order to get symbols.

	* dot representation for quick previewing of map contents

	* "gradient" command for visualizing maps as gradient fields

	* "reinitialize settings" for global & object settings (only, for
	now)

	* fixed mesh_type = 1 for molecular objects

	* fixed bug when rendering spheres alone

Changes up to 1.00b15